--- a/src/Css/Projects.css
+++ b/src/Css/Projects.css
@@ -280,12 +280,32 @@
 
 @media screen and (max-width:516px) {
     .projectBox{
+        margin: 5px 0;
         width: 98%;
+        height: 110px;
+    }
+    .projects{
+        height: 110px;
     }
     .projects img{
         width: 40%;
+        height: 100px;
     }
     .projects .webDesc{
         width: 60%;
+        font-size: 12px;
     }
+    .webDesc button {
+    width: 160px;
+    height: 40px;
+    margin: 0px 20px;
+    font-size: 18px;
+    border-radius: 30px;
+    background-color: #1E2330;
+    color: white;
+    border: 2px solid #1E2330;
+    box-shadow: 0px 0px 10px #1E2330;
+    cursor: pointer;
+    transition: 1s;
+}
 }
